--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  background-color: #f1a54e;
 }
 
 .heading {
@@ -19,26 +20,21 @@ body {
   width: 300px;
   height: 330px;
   border-radius: 20px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
   background-color: #575757;
   justify-content: center;
   padding-top: 25px;
 }
 .calc__output {
-  display: flex;
   background-color: #bcd1c0;
-  width: 250px;
-  height: 60px;
+  width: 240px;
+  height: 50px;
   border-radius: 15px;
-  justify-content: flex-end;
-}
-.calc__output--text {
   display: flex;
-  font-size: 250%;
-  padding-right: 5%;
-  align-self: center;
-  justify-content: flex-end;
+  flex-direction: column;
+  padding: 10px;
+  text-align: right;
+  font-size: 4rem;
 }
 .calc__input {
   display: grid;
@@ -56,6 +52,7 @@ body {
   align-items: center;
   font-size: 150%;
   font-weight: bolder;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 #dot {
