--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   flex-direction: column;
   padding: 10px;
   text-align: right;
-  font-size: 4rem;
+  font-size: 250%;
 }
 .calc__input {
   display: grid;
