--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
         flex-direction: column;
         padding: 10px;
         text-align: right;
-        font-size: 4rem;
+        font-size: 250%;
     }
 
     &__input {
